# RustStrap

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
core/: Cargo.toml  info.mdx
core/src/: account_manager.rs  activity_data.rs  activity_watcher.rs  bootstrapper.rs  cleaner.rs  commands.rs  cookies.rs  discord_rpc.rs  enums.rs  errors.rs  events.rs  fast_flags.rs  game_join.rs  global_settings.rs  installer.rs  launch_flags.rs  launch_handler.rs  launch_settings.rs  lib.rs  logger.rs  models.rs  multi_instance_watcher.rs  orchestrator.rs  persistence.rs  process_utils.rs  region_selector.rs  remote_data.rs  roblox_api.rs  runtime_stable.rs  self_update.rs  system_fonts.rs  watcher.rs  window_manipulation.rs
core/src/exploits/: exploit.rs  mod.rs  weao.rs
interface/: index.html  package.json  vite.config.ts
interface/public/assets/: readme.md
interface/src/: App.tsx  commands.ts  events.ts  main.tsx  styles.css
interface/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
interface/src-tauri/src/: lib.rs  main.rs
interface/src/themes/: todo.mdx
windows/: Cargo.toml
windows/src/: events.rs  lib.rs  mutex.rs  process.rs  registry.rs  shell.rs  shortcuts.rs
