#
# Copyright (c) 2026-present, RoRvzzz. All rights reserved.
#
# https://rorvzzz.cool
#
[workspace]
resolver = "2"
members = [
    "core",
    "windows",
    "interface/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.metadata.Ruststrap]
planned_members = []
