#
# Copyright (c) 2026-present, RoRvzzz. All rights reserved.
#
# https://rorvzzz.cool
#
[package]
name = "Ruststrap-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
md-5 = "0.10"
regex = "1"
log = "0.4"
urlencoding = "2"
zip = "2"
discord-presence = "3.2.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = ["Data_Xml_Dom", "UI_Notifications", "Win32_Security_Cryptography", "Win32_System_Memory", "Win32_Foundation", "Win32_System_Com"] }
