#
# Copyright (c) 2026-present, RoRvzzz. All rights reserved.
#
# https://rorvzzz.cool
#
[package]
name = "Ruststrap-platform-windows"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = ["Win32_Security_Cryptography"] }

[dev-dependencies]
tempfile = "3"
