#
# Copyright (c) 2026-present, RoRvzzz. All rights reserved.
#
# https://rorvzzz.cool
#
[package]
name = "Ruststrap"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
product-name = "Ruststrap"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
Ruststrap-core = { path = "../../core" }
Ruststrap-platform-windows = { path = "../../windows" }
tray-icon = "0.21.3"
